Configure native image build support.