@@ -2,11 +2,13 @@ plugins {
 	id 'java'
     id 'eclipse'
 	id 'org.springframework.boot' version '4.0.1'
+	id 'org.graalvm.buildtools.native' version '0.11.1'
 }
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.graalvm.buildtools.native'
 
 description = 'SolarFlux VerneMQ Webhook'
 version = '5.0.0'
@@ -67,5 +69,18 @@ bootJar {
 	manifest {
 		attributes 	'Implementation-Title': 'SolarFlux VerneMQ Webhook Server',
 					'Implementation-Version': archiveVersion
+	}
+}
+
+graalvmNative {
+	binaries.all {
+		buildArgs.add('--enable-native-access=ALL-UNNAMED')
+		buildArgs.add('-O3')
+		
+		systemProperties = ['spring.profiles.active': 'production']
+	}
+	
+	binaries.main {
+		imageName = 'solarflux-webhook'
 	}
 }
